--- a/build.gradle
+++ b/build.gradle
@@ -98,6 +98,9 @@ project(":core") {
         compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
         compile group: 'javax.websocket', name: 'javax.websocket-api', version: '1.1'
         compile group: 'org.glassfish.tyrus', name: 'tyrus-container-grizzly-client', version: '1.8.3'
+        compile group: 'org.glassfish', name: 'javax.json', version: '1.1'
+        compile group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
+
 
 
     }
